# pulumi-eks-ml

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
projects/multi-region/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
projects/skypilot-multi-tenant/: DEPLOYMENT.md  Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  config.py  pyproject.toml
projects/starter/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
pulumi_eks_ml/eks/: __init__.py  cluster.py  config.py  irsa.py  karpenter.py
pulumi_eks_ml/eks_addons/: __init__.py  alb_controller_addon.py  ebs_csi_addon.py  efs_csi_addon.py  external_dns_addon.py  fluent_bit_addon.py  metrics_server_addon.py  nvidia_device_plugin_addon.py  tailscale_subnet_router_addon.py
pulumi_eks_ml/eks_apps/: __init__.py  skypilot.py  tailscale_subnet_router.py
pulumi_eks_ml/eks_apps/skypilot/: __init__.py  api_server.py  config_builder.py  credentials.py  data_plane.py  data_plane_irsa.py  iam.py  idp.py  service_discovery.py
pulumi_eks_ml/vpc/: __init__.py  core.py  multi_region.py
tests/integration/: conftest.py  test_eks.py  test_vpc.py  test_vpc_peering.py
tests/unit/: test_eks_cluster.py  test_vpc.py
