[project]
name = "multi-region"
version = "0.1.0"
description = "A project for deploying a multi-region EKS architecture, with a single VPC and one EKS cluster per region, peered in a full mesh topology."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.192.0",
    "pulumi-eks-ml",
]

[tool.uv.sources]
pulumi-eks-ml = { path = "../../", editable = true }
