[project]
name = "starter"
version = "0.1.0"
description = "A minimal starter project with a single EKS cluster in one region"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.192.0",
    "pulumi-eks-ml",
]

[tool.uv.sources]
pulumi-eks-ml = { path = "../../", editable = true }
